<resources>
    <string name="app_name">MedAlert</string>
    <string name="confirm">Confirm</string>
    <string name="medical_issues_disabilities">Medical Issues/Disabilities</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="full_name">Full Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="contact_details">Contact Details</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="telephone">Telephone</string>
    <string name="app_logo">App Logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="sign_up">Sign Up</string>
</resources>
