<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginDetailsFragment">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/baseline_calendar_month_24"/>


        <TextView
            android:id="@+id/txtTitle"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_details"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/telephone" />

    <EditText
        android:id="@+id/edtTel"
        android:layout_width="match_parent"
        android:inputType="phone"
        style="@style/EditTextStyle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        style="@style/EditTextStyle"  />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/TextViewStyle" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        style="@style/EditTextStyle"  />



    <TextView
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        style="@style/EditTextStyle"  />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/confirm"
        style="@style/ButtonStyle"/>

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="15dp"
        android:textColor="@color/red" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
