<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PersonalDetailsFragment">



    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/baseline_calendar_month_24"/>


        <TextView
            android:id="@+id/txtTitle"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:inputType="text"
            style="@style/EditTextStyle" />


        <TextView
            android:id="@+id/txtDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:text="@string/date_of_birth" />

        <EditText
            android:id="@+id/edtDateOfBirth"
            android:layout_width="match_parent"
            style="@style/EditTextStyle"
            android:paddingRight="10dp"
            android:focusable="false"
            android:inputType="date"
            android:drawableRight="@drawable/baseline_calendar_month_24" />


        <TextView
            android:id="@+id/txtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:text="@string/gender" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            style="@style/EditTextStyle"
            android:spinnerMode="dropdown" />


        <TextView
            android:id="@+id/txtMedical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:text="@string/medical_issues_disabilities" />


        <Spinner
            android:id="@+id/spinnerMedical"
            android:layout_width="match_parent"
            style="@style/EditTextStyle"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/confirm"
            style="@style/ButtonStyle"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
